[workspace]
members = [
  "program",
  "sdk",
  "token",
  "associated-token-account",
  "token-metadata",
]
resolver = "2"

[workspace.dependencies]
arch_program = { path = "program", version = "0.6.0" }
apl-token = { path = "token", version = "0.6.0", features = ["no-entrypoint"] }
titan-types-core = "1.3.3"
