[package]
name = "apl-associated-token-account"
version = { workspace = true }
edition = "2021"
description = "Associated Token Account program for Arch Network providing deterministic token account management and instructions."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch_program = { workspace = true }
apl-token = { workspace = true, features = ["no-entrypoint"] }
borsh = { workspace = true }
bitcoin = { workspace = true }
bitcoin-io = { workspace = true }

arrayref = { workspace = true }
bytemuck = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
