[package]
name = "arch_program"
version = "0.1.0"
edition = "2021"
description = "A Rust library for building programs that run inside the Arch Virtual Machine. Provides core functionality for creating instructions, managing accounts, handling program errors, and interacting with the Arch runtime environment. Includes utilities for logging, transaction handling, and Bitcoin UTXO management."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
hex = { version = "0.4.3" }
memoffset = { version = "0.9.0" }
rustversion = { version = "1.0.14" }
thiserror = { version = "1.0.57" }
bitcoin = { version = "0.32.3", features = ["serde"] }
sha256 = { version = "1.5.0" }
serde = { version = "1.0.197" }

[dev-dependencies]
proptest = { version = "1.5.0" }
rand = { version = "0.8.5" }
