[package]
name = "arch_program"
version = "0.1.0"
edition = "2021"
description = "A Rust library for building programs that run inside the Arch Virtual Machine. Provides core functionality for creating instructions, managing accounts, handling program errors, and interacting with the Arch runtime environment. Includes utilities for logging, transaction handling, and Bitcoin UTXO management."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true }
hex = { workspace = true }
memoffset = { workspace = true }
rustversion = { workspace = true }
thiserror = { workspace = true }
bitcoin = { workspace = true }
sha256 = { workspace = true }
serde = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
bytemuck = { workspace = true }
bitcoin-io = { version = "=0.1.2"}

[target.'cfg(not(target_os = "solana"))'.dependencies]
libsecp256k1 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true}
