[package]
name = "arch_program"
version = { workspace = true }
edition = "2021"
description = "A Rust library for building programs that run inside the Arch Virtual Machine. Provides core functionality for creating instructions, managing accounts, handling program errors, and interacting with the Arch runtime environment. Includes utilities for logging, transaction handling, and Bitcoin UTXO management."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true }
bitcode = { workspace = true }
hex = { workspace = true }
memoffset = { workspace = true }
rustversion = { workspace = true }
thiserror = { workspace = true }
bitcoin = { workspace = true }
bitcoin_slices = { workspace = true }
sha256 = { workspace = true }
serde = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
bytemuck = { workspace = true }
bitcoin-io = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
serde_derive = { workspace = true }
serde_bytes = { workspace = true }
sha3 = { workspace = true }
solana-sanitize = { workspace = true }
titan-types-core = { workspace = true }
libfuzzer-sys = { workspace = true, optional = true }
five8_const = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
rand = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
bitflags = { workspace = true }

[features]
default = []
fuzzing = ["libfuzzer-sys"]
