[package]
name = "arch_sdk"
version = { workspace = true }
edition = "2021"
description = "A Rust SDK for building applications on the Arch Network blockchain platform. Provides tools and interfaces for developing, testing, and deploying programs with native Bitcoin integration."
license = "MIT"

[dependencies]
arch_program = { workspace = true }

bitcode = { workspace = true }
borsh = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }
sha256 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
bitcoincore-rpc = { workspace = true }
bitcoin = { workspace = true, features = ["rand"] }
titan-client = { workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
indicatif = { workspace = true }
base64 = { workspace = true }
bip322 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true, features = [
  "executor",
] }
rand = { workspace = true }

libfuzzer-sys = { workspace = true, optional = true }
uuid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }

[features]
default = []
fuzzing = ["libfuzzer-sys"]
