[package]
name = "apl-token-metadata"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "On-chain program for Arch Token Metadata"
readme = "README.md"
keywords = ["arch", "token", "metadata", "program", "sbf"]
categories = ["cryptography", "embedded", "no-std"]

[dependencies]
apl-token = { version = "0.6.0", features = ["no-entrypoint"] }
arch_program = "0.6.0"
borsh = { version = "1.4.0", features = ["derive"] }
num-derive = "0.4.0"
num-traits = "0.2"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "apl_token_metadata"

[features]
default = []
no-entrypoint = []
