[package]
name = "apl-token"
version = "0.5.2"
edition = "2021"
description = "A token program for the Arch blockchain, providing ERC20-like functionality including minting, transferring, and burning tokens with support for authority management and account freezing."
license = "MIT"
repository = "https://github.com/Arch-Network/arch-sdk"
homepage = "https://arch.network"
documentation = "https://docs.rs/apl-token"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch_program = "0.5.2"
borsh = { version = "1.5.1", features = ["derive"] }
bitcoin = { version = "0.31.0", features = ["serde"] }
bitcoin-io = { version = "=0.1.2" }

arrayref = "0.3.9"
bytemuck = "1.20.0"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.3"
thiserror = "2.0"

[dev-dependencies]
proptest = "1.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
