[package]
name = "apl-token"
version = { workspace = true }
edition = "2021"
description = "APL Token Program"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch_program = { workspace = true }
borsh = { workspace = true }
bitcoin = { workspace = true }
bitcoin-io = { workspace = true }

arrayref = { workspace = true }
bytemuck = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
